--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>SHUFF - Portfolio Site of Sam Huffman</title>
+    <title>SHUFF - Portfolio Site of Sam Huffman.</title>
     <!-- external stylesheet -->
     <link href="style.css" rel="stylesheet" type="text/css" />
     <!-- google fonts -->
