2nd commit, animations updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>SHUFF - Portfolio Site of Sam Huffman.</title>
+    <title>SHUFF - Portfolio Site of Sam Huffman</title>
     <!-- external stylesheet -->
     <link href="style.css" rel="stylesheet" type="text/css" />
     <!-- google fonts -->
@@ -27,8 +27,7 @@
       <div class="wrapperhide"></div>
       <header>
         <a href="index.html"><img src="images/shuff.png" /></a>
-      </header>
-      <nav>
+        <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="#projects" class="projects">Projects</a></li>
@@ -36,6 +35,8 @@
           <li><a href="#contact" class="contact">Contact</a></li>
         </ul>
       </nav>
+      </header>
+
       <main>
         <article>
           <h1>Intro</h1>
@@ -47,7 +48,7 @@
 
         <article id="projects">
           <h1>Projects</h1>
-          <p>Each projects is linked to Github with the exception of Multistreamer as it is not uploaded yet.</p>
+          <p>Each project is linked to Github with the exception of Multistreamer as it is not uploaded yet.</p>
           <ol>
             <li><p>Kivy Beat Sequencer <span class="created">*</span></p>
               <a href="https://github.com/syfenx/kivysequencer" target="_blank"><img src="https://angel.co/cdn-cgi/image/width=414,height=264,format=auto,fit=scale-down/https://s3.amazonaws.com/poly-screenshots.angel.co/Project/53/1107017/745f15937d8ae28eb11e1de029cd1c9e-original.png"></a>
@@ -86,6 +87,9 @@
                 <img src="images/artwork/6.png" alt="Hand drawn art from 2017.">
               </li>
               <li>
+                <img src="images/artwork/pico8-art.gif" alt="Created with Lua in Pico-8">
+              </li>
+              <li>
                 <img src="images/artwork/1.jpeg" alt="Hand drawn art from 2005, edited in Adobe Photoshop.">
               </li>
               <!-- <li>
@@ -120,7 +124,7 @@
           <h1>Contact</h1>
           <p>Email: <a href="mailto:syfenx@gmail.com?subject=Hi, I just found your website">syfenx@gmail.com</a>  
           </p>
-          <!-- use _blank to open in a new tab/window so they don't leave your site-->
+          <!-- use _blank to open in a new tab/window-->
           <p>Github: <a href="https://www.github.com/syfenx" target="_blank">https://www.github.com/syfenx</a></p>
           
           <hr>
@@ -144,6 +148,9 @@
     src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"></script>
+    <script
+    src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
