--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@
 
         <article id="projects">
           <h1>Projects</h1>
-          <p>Each project is linked to Github with the exception of Multistreamer as it is not uploaded yet.</p>
+          <p>Each project is linked to Github with the exception of Multistreamer.</p>
           <ol>
             <li><p>Kivy Beat Sequencer <span class="created">*</span></p>
-              <a href="https://github.com/syfenx/kivysequencer" target="_blank"><img src="https://angel.co/cdn-cgi/image/width=414,height=264,format=auto,fit=scale-down/https://s3.amazonaws.com/poly-screenshots.angel.co/Project/53/1107017/745f15937d8ae28eb11e1de029cd1c9e-original.png"></a>
+              <a href="https://github.com/syfenx/kivysequencer" target="_blank"><img src="images/projects/kivyseq.png"></a>
             </li>
             <li><p>Pygame Beat Sequencer <span class="created">*</span></p>
-              <a href="https://github.com/syfenx/pyBeats" target="_blank"><img src="https://angel.co/cdn-cgi/image/width=414,height=264,format=auto,fit=scale-down/https://s3.amazonaws.com/poly-screenshots.angel.co/Project/1a/1107020/84bcf07dd6795f586207030b47868ddb-original.png"></a>
+              <a href="https://github.com/syfenx/pyBeats" target="_blank"><img src="images/projects/pygameseq.png"></a>
             </li>
             <li><p>Note Tool <span class="created">*</span></p>
-              <a href="https://github.com/syfenx/Note-Tool" target="_blank"><img src="https://angel.co/cdn-cgi/image/width=414,height=264,format=auto,fit=scale-down/https://s3.amazonaws.com/poly-screenshots.angel.co/Project/ca/1107021/64239a14d8c8f86603022a6a5c8843b5-original.png"></a>
+              <a href="https://github.com/syfenx/Note-Tool" target="_blank"><img src="images/projects/notetool.png"></a>
             </li>
             <li><p>Multistreamer <span class="created">*</span></p>
-              <a href="https://angel.co/projects/1107025-multistreamer" target="_blank"><img src="https://angel.co/cdn-cgi/image/width=414,height=264,format=auto,fit=scale-down/https://s3.amazonaws.com/poly-screenshots.angel.co/Project/a6/1107025/fcbdffed5ca908f2840f98a86e6bd9ac-original.jpg"></a>
+              <a href="https://angel.co/projects/1107025-multistreamer" target="_blank"><img src="images/projects/multistreamer.jpg"></a>
             </li>
             <li><p>Home Media Server <span class="contrib">*</span></p>
-              <a href="https://github.com/syfenx/home-server" target="_blank"><img src="https://angel.co/cdn-cgi/image/width=414,height=264,format=auto,fit=scale-down/https://s3.amazonaws.com/poly-screenshots.angel.co/enhanced_screenshots/2152719-original."></a>
+              <a href="https://github.com/syfenx/home-server" target="_blank"><img src="images/projects/homeserver.png"></a>
             </li>
             <li><p>Twitter Clone <span class="created">*</span></p>
-              <a href="https://github.com/syfenx/twitter-css-grid" target="_blank"><img src="https://angel.co/cdn-cgi/image/width=414,height=264,format=auto,fit=scale-down/https://s3.amazonaws.com/poly-screenshots.angel.co/Project/5b/1107023/64ebc0ea4f76fa5ef93236b740a1c7d4-original.png"></a>
+              <a href="https://github.com/syfenx/twitter-css-grid" target="_blank"><img src="images/projects/twitterclone.png"></a>
             </li>
             <li><p>Quick Flash Cards <span class="created">*</span></p>
-              <a href="https://github.com/syfenx/Quick-Flash-Cards" target="_blank"><img src="https://angel.co/cdn-cgi/image/width=414,height=264,format=auto,fit=scale-down/https://s3.amazonaws.com/poly-screenshots.angel.co/Project/b6/1107022/fae393177ec114155e1c49196fbda07d-original.png"></a>
+              <a href="https://github.com/syfenx/Quick-Flash-Cards" target="_blank"><img src="images/projects/quickflashcards.png"></a>
             </li>
           </ol>
         </article>
@@ -84,28 +84,28 @@
           <div class="artwork">
             <ol>
               <li>
-                <img src="images/artwork/6.png" alt="Hand drawn art from 2017.">
+                <img src="images/artwork/6.png" alt="Hand drawn art. (2017)">
               </li>
               <li>
-                <img src="images/artwork/pico8-art.gif" alt="Created with Lua in Pico-8">
+                <img src="images/artwork/pico8-art.gif" alt="Created with Lua in Pico-8. (2020)">
               </li>
               <li>
-                <img src="images/artwork/1.jpeg" alt="Hand drawn art from 2005, edited in Adobe Photoshop.">
+                <img src="images/artwork/1.jpeg" alt="Hand drawn art, edited in Adobe Photoshop. (2005)">
               </li>
               <!-- <li>
                 <img src="images/artwork/2.jpeg">
               </li> -->
               <li>
-                <img src="images/artwork/3.jpeg" alt="Hand drawn art from 2005, edited in Adobe Photoshop.">
+                <img src="images/artwork/3.jpeg" alt="Hand drawn art, edited in Adobe Photoshop. (2005)">
               </li>
               <li>
-                <img src="images/artwork/4.jpeg" alt="Hand drawn art from 2005, edited in Adobe Photoshop.">
+                <img src="images/artwork/4.jpeg" alt="Hand drawn art, edited in Adobe Photoshop. (2005)">
               </li>
               <li>
-                <img src="images/artwork/5.jpeg" alt="Hand drawn art from 2005, edited in Adobe Photoshop.">
+                <img src="images/artwork/5.jpeg" alt="Hand drawn art, edited in Adobe Photoshop. (2005)">
               </li>
               <li>
-                <img src="images/artwork/wrench.jpg" alt="Created in 2009 with Adobe Photoshop.">
+                <img src="images/artwork/wrench.jpg" alt="Created with Adobe Photoshop. (2009)">
               </li>
             </ol>
             
