--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <img src="images/artwork/4.jpeg" alt="Hand drawn art, edited in Adobe Photoshop. (2005)">
               </li>
               <li>
-                <img src="images/artwork/5.jpeg" alt="Hand drawn art, edited in Adobe Photoshop. (2005)">
+                <img src="images/artwork/5.jpeg" alt="Hand drawn art (2005)">
               </li>
               <li>
                 <img src="images/artwork/wrench.jpg" alt="Created with Adobe Photoshop. (2009)">
