--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -26,7 +26,7 @@
     <div class="wrapper">
       <div class="wrapperhide"></div>
       <header>
-        <a href="index.html"><img src="images/shuff.png" /></a>
+        <a href="index.html"><img src="images/shuff.png" alt="logo header image"/></a>
         <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -48,28 +48,28 @@
 
         <article id="projects">
           <h1>Projects</h1>
-          <p>Each project is linked to Github with the exception of Multistreamer.</p>
+          <p>Each project is linked to GitHub with the exception of Multistreamer.</p>
           <ol>
             <li><p>Kivy Beat Sequencer <span class="created">*</span></p>
-              <a href="https://github.com/syfenx/kivysequencer" target="_blank"><img src="images/projects/kivyseq.png"></a>
+              <a href="https://github.com/syfenx/kivysequencer" target="_blank"><img src="images/projects/kivyseq.png" alt="Kivy sequencer"></a>
             </li>
             <li><p>Pygame Beat Sequencer <span class="created">*</span></p>
-              <a href="https://github.com/syfenx/pyBeats" target="_blank"><img src="images/projects/pygameseq.png"></a>
+              <a href="https://github.com/syfenx/pyBeats" target="_blank"><img src="images/projects/pygameseq.png" alt="Python sequencer"></a>
             </li>
             <li><p>Note Tool <span class="created">*</span></p>
-              <a href="https://github.com/syfenx/Note-Tool" target="_blank"><img src="images/projects/notetool.png"></a>
+              <a href="https://github.com/syfenx/Note-Tool" target="_blank"><img src="images/projects/notetool.png" alt="Note tool"></a>
             </li>
             <li><p>Multistreamer <span class="created">*</span></p>
-              <a href="https://angel.co/projects/1107025-multistreamer" target="_blank"><img src="images/projects/multistreamer.jpg"></a>
+              <a href="https://angel.co/projects/1107025-multistreamer" target="_blank"><img src="images/projects/multistreamer.jpg" alt="Multistreamer"></a>
             </li>
             <li><p>Home Media Server <span class="contrib">*</span></p>
-              <a href="https://github.com/syfenx/home-server" target="_blank"><img src="images/projects/homeserver.png"></a>
+              <a href="https://github.com/syfenx/home-server" target="_blank"><img src="images/projects/homeserver.png" alt="Home server"></a>
             </li>
             <li><p>Twitter Clone <span class="created">*</span></p>
-              <a href="https://github.com/syfenx/twitter-css-grid" target="_blank"><img src="images/projects/twitterclone.png"></a>
+              <a href="https://github.com/syfenx/twitter-css-grid" target="_blank"><img src="images/projects/twitterclone.png" alt="Twitter html clone"></a>
             </li>
             <li><p>Quick Flash Cards <span class="created">*</span></p>
-              <a href="https://github.com/syfenx/Quick-Flash-Cards" target="_blank"><img src="images/projects/quickflashcards.png"></a>
+              <a href="https://github.com/syfenx/Quick-Flash-Cards" target="_blank"><img src="images/projects/quickflashcards.png" alt="Quick flash cards"></a>
             </li>
           </ol>
         </article>
@@ -77,6 +77,11 @@
         <article id="about">
           <h1>About</h1>
           <p> I've been interested in computers since the MS-DOS, Windows 3.1 days. I started briefly with QBasic then moved to Visual Basic 6 and many languages from there, I started programming and experimenting with code around the age of 11/12.</p>
+
+          <h3>Interests/Passions</h3>
+          <p>I have a strong passion for web development and improving my skills, when dealing with technology, you never stop learning.</p>
+          <p>I enjoy working with people/teams as it helps in many areas, studying, a way to bounce ideas off each other, solving difficult problems as a group.</p>
+          <p>My favorite music artist is Aphex Twin, some hobbies outside of the tech world are going on walks, gaming. My favorite game is Half-life 2 Deathmatch.</p>
 
           <h3>Artwork</h3>
           <p>A collection of artwork I've done over the years.</p>
@@ -122,10 +127,12 @@
 
         <article id="contact">
           <h1>Contact</h1>
-          <p>Email: <a href="mailto:syfenx@gmail.com?subject=Hi, I just found your website">syfenx@gmail.com</a>  
+          <p><a href="mailto:syfenx@gmail.com?subject=Hi,%20I%20just%20found%20your%20website">Email</a>  
           </p>
           <!-- use _blank to open in a new tab/window-->
-          <p>Github: <a href="https://www.github.com/syfenx" target="_blank">https://www.github.com/syfenx</a></p>
+          <p><a href="https://www.github.com/syfenx" target="_blank">GitHub</a></p>
+
+          <p><a href="https://www.linkedin.com/in/sam-huffmanj" target="_blank">LinkedIn</a></p>
           
           <hr>
 
